--- a/Navbar.css
+++ b/Navbar.css
@@ -10,7 +10,7 @@
 /* Body and Main Styling */
 
 main {
-    margin-top: 50px; /* Pushes content below navbar */
+    margin-top: 50px;
     background: linear-gradient(45deg, #1a1054, #255ff1);
     padding: 40px 20px;
     min-height: 100vh;
